Fix whitespace wrapping on form inputs

--- a/styles.css
+++ b/styles.css
@@ -174,11 +174,13 @@ width: 100%;
 span {
     display: flex;
     flex-flow: column wrap;
+    white-space: nowrap;
     width: 40%;
     margin-top: 20px;
     margin-right: 30px;
     color: var(--special_text-color);
 }
+
 input:focus {
     border-style: solid;
     outline: none;
